--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: trusty
+dist: bionic
 sudo: required
 language: cpp
 os: linux
@@ -6,12 +6,11 @@ compiler: gcc
 addons:
   apt:
     sources: ['ubuntu-toolchain-r-test']
-    packages: ['g++-4.9']
+    packages: ['g++-7']
 env:
-    # список переменных окружения, влияющих на матрицу сборки:
-    - TARGET_CPU=amd64 COMPILER=g++-4.9 BUILD_CONFIGURATION=Debug
-    - TARGET_CPU=amd64 COMPILER=g++-4.9 BUILD_CONFIGURATION=Release
-      
+    - TARGET_CPU=amd64 COMPILER=g++-7 BUILD_CONFIGURATION=Debug
+    - TARGET_CPU=amd64 COMPILER=g++-7 BUILD_CONFIGURATION=Release
+
 script:
   - cd Build
   - cd $BUILD_CONFIGURATION
