Added tests with non-square grids

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -31,3 +31,20 @@ add_test(NAME Test24 COMMAND testbench ../../../TestData/24_test.xml)
 add_test(NAME Test25 COMMAND testbench ../../../TestData/25_test.xml)
 add_test(NAME Test26 COMMAND testbench ../../../TestData/26_test.xml)
 add_test(NAME Test27 COMMAND testbench ../../../TestData/27_test.xml)
+add_test(NAME Test28 COMMAND testbench ../../../TestData/28_test.xml)
+add_test(NAME Test29 COMMAND testbench ../../../TestData/29_test.xml)
+add_test(NAME Test30 COMMAND testbench ../../../TestData/30_test.xml)
+add_test(NAME Test31 COMMAND testbench ../../../TestData/31_test.xml)
+add_test(NAME Test32 COMMAND testbench ../../../TestData/32_test.xml)
+add_test(NAME Test33 COMMAND testbench ../../../TestData/33_test.xml)
+add_test(NAME Test34 COMMAND testbench ../../../TestData/34_test.xml)
+add_test(NAME Test35 COMMAND testbench ../../../TestData/35_test.xml)
+add_test(NAME Test36 COMMAND testbench ../../../TestData/36_test.xml)
+add_test(NAME Test37 COMMAND testbench ../../../TestData/37_test.xml)
+add_test(NAME Test38 COMMAND testbench ../../../TestData/38_test.xml)
+add_test(NAME Test39 COMMAND testbench ../../../TestData/39_test.xml)
+add_test(NAME Test40 COMMAND testbench ../../../TestData/40_test.xml)
+add_test(NAME Test41 COMMAND testbench ../../../TestData/41_test.xml)
+add_test(NAME Test42 COMMAND testbench ../../../TestData/42_test.xml)
+add_test(NAME Test43 COMMAND testbench ../../../TestData/43_test.xml)
+add_test(NAME Test44 COMMAND testbench ../../../TestData/44_test.xml)
