--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -7,7 +7,7 @@ set(HEADERS     cell.h
                 map.h
                 mission.h
                 node.h
-                search.h
+                Astar.h
                 searchresult.h
                 tinyxml2.h
                 xmllogger.h)
@@ -17,7 +17,7 @@ set(SOURCES     cell.cpp
                 map.cpp
                 mission.cpp
                 node.cpp
-                search.cpp
+                Astar.cpp
                 tinyxml2.cpp
                 xmllogger.cpp)
 
