--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -1,26 +1,26 @@
 
-set(HEADERS     cell.h
+set(HEADERS     Astar.h
+                cell.h
                 config.h
                 environmentoptions.h
                 gl_const.h
+                ilogger.h
+                LPAstar.h
                 map.h
                 mission.h
                 node.h
-                Astar.h
-                ilogger.h
                 searchresult.h
                 tinyxml2.h
-                LPAstar.h
                 xmllogger.h)
 
-set(SOURCES     cell.cpp
+set(SOURCES     Astar.cpp
+                cell.cpp
                 config.cpp
+                LPAstar.cpp
                 map.cpp
                 mission.cpp
                 node.cpp
-                Astar.cpp
                 tinyxml2.cpp
-                LPAstar.cpp
                 xmllogger.cpp)
 
 add_executable(${PROJECT_NAME} ${HEADERS} ${SOURCES} main.cpp)
